--- a/package.json
+++ b/package.json
@@ -17,11 +17,18 @@
     "@chakra-ui/theme-tools": "^2.2.6",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@stripe/react-stripe-js": "^2.8.1",
+    "@stripe/stripe-js": "^4.9.0",
+    "@zegocloud/zego-uikit-prebuilt": "^2.12.0",
+    "axios": "^1.7.7",
     "chakra-framer-carousel": "^0.5.0",
     "chart.js": "^4.4.5",
     "firebase": "^11.0.1",
+    "firebase-admin": "^12.7.0",
     "framer-motion": "^11.11.9",
     "next": "14.2.15",
+    "nodemailer": "^6.9.16",
+    "pg": "^8.13.1",
     "primeicons": "^7.0.0",
     "primereact": "^10.8.4",
     "react": "^18",
@@ -31,7 +38,9 @@
     "react-dom": "^18",
     "react-feather": "^2.0.10",
     "react-icons": "^5.3.0",
-    "react-tree-graph": "^8.0.2"
+    "react-tree-graph": "^8.0.2",
+    "stripe": "^17.3.1",
+    "twilio": "^5.3.5"
   },
   "devDependencies": {
     "eslint": "^8",
