.env.example updated

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,22 @@
-NEXT_PUBLIC_BASE_URL=<base-url-of-website>
+NEXT_PUBLIC_BASE_URL=<example>
+NEXT_PUBLIC_FIREBASE_APIKEY=<example>
+NEXT_PUBLIC_FIREBASE_AUTHDOMAIN=<example>
+NEXT_PUBLIC_FIREBASE_PROJECTID=<example>
+NEXT_PUBLIC_FIREBASE_STORAGEBUCKET=<example>
+NEXT_PUBLIC_FIREBASE_MESSAGING=<example>
+NEXT_PUBLIC_FIREBASE_APPID=<example>
+NEXT_PUBLIC_STRIPE_PUBLIC_KEY=<example>
+STRIPE_SECRET_KEY=<example>
+DATABASE_HOST=<example>
+DATABASE_PORT=<example>
+DATABASE_USER=<example>
+DATABASE_PASSWORD=<example>
+DATABASE_NAME=<example>
+ZEGO_APPID=<example>
+ZEGO_SECRET=<example>
+BULK_EMAIL_SERVICE=<example>
+BULK_EMAIL_USER=<example>
+BULK_EMAIL_PASSWORD=<example>
+TWILIO_SID=<example>
+TWILIO_TOKEN=<example>
+TWILIO_PHONE_NUMBER=<example>
