--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "firebase": "^11.0.1",
     "firebase-admin": "^12.7.0",
     "framer-motion": "^11.11.9",
+    "moment": "^2.30.1",
     "next": "14.2.15",
     "nodemailer": "^6.9.16",
     "pg": "^8.13.1",
