--- a/.env.example
+++ b/.env.example
@@ -11,11 +11,13 @@ DATABASE_PORT=<example>
 DATABASE_USER=<example>
 DATABASE_PASSWORD=<example>
 DATABASE_NAME=<example>
+DATABASE_URL=<example>
 ZEGO_APPID=<example>
 ZEGO_SECRET=<example>
-BULK_EMAIL_SERVICE=<example>
-BULK_EMAIL_USER=<example>
-BULK_EMAIL_PASSWORD=<example>
 TWILIO_SID=<example>
 TWILIO_TOKEN=<example>
-TWILIO_PHONE_NUMBER=<example>
+BULK_EMAIL_HOST=<example>
+BULK_EMAIL_PORT=<example>
+BULK_EMAIL_USER=<example>
+BULK_EMAIL_PASSWORD=<example>
+TWILIO_PHONE_NUMBER=+<example> 
