sorting and filtering added

--- a/.env.example
+++ b/.env.example
@@ -12,8 +12,8 @@ DATABASE_USER=<example>
 DATABASE_PASSWORD=<example>
 DATABASE_NAME=<example>
 DATABASE_URL=<example>
-ZEGO_APPID=<example>
-ZEGO_SECRET=<example>
+NEXT_PUBLIC_ZEGO_APPID=<example>
+NEXT_PUBLIC_ZEGO_SECRET=<example>
 TWILIO_SID=<example>
 TWILIO_TOKEN=<example>
 BULK_EMAIL_HOST=<example>
