--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@emotion/styled": "^11.13.0",
     "@stripe/react-stripe-js": "^2.8.1",
     "@stripe/stripe-js": "^4.9.0",
+    "@tanstack/react-table": "^8.20.6",
     "@zegocloud/zego-uikit-prebuilt": "^2.12.0",
     "axios": "^1.7.7",
     "chakra-framer-carousel": "^0.5.0",
