--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "framer-motion": "^11.11.9",
     "moment": "^2.30.1",
     "next": "14.2.15",
+    "nextjs-google-analytics": "^2.3.7",
     "nextjs-toploader": "^3.7.15",
     "nodemailer": "^6.9.16",
     "pg": "^8.13.1",
