--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "axios": "^1.7.7",
     "chakra-framer-carousel": "^0.5.0",
     "chart.js": "^4.4.5",
+    "crypto": "^1.0.1",
     "firebase": "^11.0.1",
     "firebase-admin": "^12.7.0",
     "framer-motion": "^11.11.9",
@@ -42,7 +43,9 @@
     "react-dom": "^18",
     "react-feather": "^2.0.10",
     "react-icons": "^5.3.0",
+    "react-square-web-payments-sdk": "^3.2.4-beta.1",
     "react-tree-graph": "^8.0.2",
+    "square": "^43.0.0",
     "stripe": "^17.3.1",
     "twilio": "^5.3.5"
   },
