--- a/.env.example
+++ b/.env.example
@@ -20,4 +20,7 @@ BULK_EMAIL_HOST=<example>
 BULK_EMAIL_PORT=<example>
 BULK_EMAIL_USER=<example>
 BULK_EMAIL_PASSWORD=<example>
-TWILIO_PHONE_NUMBER=+<example> 
+TWILIO_PHONE_NUMBER=+<example>
+NEXT_PUBLIC_SQUARE_APP_ID=<example>
+NEXT_PUBLIC_SQUARE_LOCATION_ID=<example>
+SQUARE_ACCESS_TOKEN=<example>
